# google-gemini-rust-lib

./: Cargo.toml  README.md  test.js
google_gemini_node/: README.md  package.json
google_gemini_node/native/: Cargo.toml
native/: index.node
src/: lib.rs
